k8s/security/networkpolicy-app-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: martianbank-data
  labels:
    app.kubernetes.io/part-of: martianbank
    environment: dlmdccco01-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-services-to-mongodb
  namespace: martianbank-data
  labels:
    app.kubernetes.io/part-of: martianbank
    environment: dlmdccco01-dev
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: martianbank-app
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - customer-auth
                  - atm-locator
                  - dashboard
                  - accounts
                  - transactions
                  - loan
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: martianbank-data
          podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - mongodb-backup
                  - mongodb-restore
      ports:
        - protocol: TCP
          port: 27017
