k8s/security/networkpolicy-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: martianbank-app
  labels:
    app.kubernetes.io/part-of: martianbank
    environment: dlmdccco01-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-caddy-to-nginx
  namespace: martianbank-app
  labels:
    app.kubernetes.io/part-of: martianbank
    environment: dlmdccco01-dev
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: caddy-system
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-http-services
  namespace: martianbank-app
  labels:
    app.kubernetes.io/part-of: martianbank
    environment: dlmdccco01-dev
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - ui
          - customer-auth
          - atm-locator
          - dashboard
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8001
        - protocol: TCP
          port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dashboard-to-domain-services
  namespace: martianbank-app
  labels:
    app.kubernetes.io/part-of: martianbank
    environment: dlmdccco01-dev
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - accounts
          - transactions
          - loan
          - customer-auth
          - atm-locator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dashboard
      ports:
        - protocol: TCP
          port: 50051
        - protocol: TCP
          port: 50052
        - protocol: TCP
          port: 50053
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8001
